--- a/index.html
+++ b/index.html
@@ -314,16 +314,16 @@
         <div class="heart">💖</div>
         
         <div class="text-container">
-            <div class="floating-text">Anh Xin Lỗi Em</div>
-            <div class="floating-text">Em là tất cả</div>
-            <div class="floating-text">Mãi mãi bên nhau</div>
-            <div class="floating-text">Xin lỗi rất nhiều lắm</div>
-            <div class="floating-text">Em đẹp nhất</div>
-            <div class="floating-text">Em mãi đỉnh</div>
-            <div class="floating-text">Forever & Always</div>
-            <div class="floating-text">Hãy thứ lỗi cho anh 💕</div>
+            <div class="floating-text">Đồ não cá vàng!</div>
+            <div class="floating-text">Ngu mà tỏ ra nguy hiểm!</div>
+            <div class="floating-text">Bớt ảo tưởng lại đi!</div>
+            <div class="floating-text">Thua cả con gà công nghiệp!</div>
+            <div class="floating-text">Tưởng hay lắm à?</div>
+            <div class="floating-text">Tụi mày là đồ con dog</div>
+            <div class="floating-text">AE sống như cẹc</div>
+            <div class="floating-text"> Mãi Keo💕</div>
 
-            <div class="main-message">💖 Dành cho em NGỌC ANH 💖</div>
+            <div class="main-message">💖 Dành cho TỤI MÀY 💖</div>
         </div>
 
         <div class="sparkles">
